# observer.hs

./: .gitignore  LICENSE  Makefile  README  observer.cabal  simple-observer.cabal
Control/: Observer.hs
Control/Observer/: Synchronous.hs
