Name:                   observer
Version:                0.0.1
Stability:              Alpha
Synopsis:               The Observer pattern
Description:
    This library contains a Haskell implementation of the Observer
    pattern, specified as a typeclass with two example instances
    (demonstrating synchronous and asynchronous notifications)..
Category:               Control
License:                BSD3
License-file:           LICENSE
Copyright:              Andy Gimblett <haskell@gimbo.org.uk>
Author:                 Andy Gimblett <haskell@gimbo.org.uk>
Maintainer:             Andy Gimblett <haskell@gimbo.org.uk>
Build-Type:             Simple
Cabal-Version:          >=1.6
Extra-source-files:     README

Source-Repository head
    Type:         git
    Location:     http://code.haskell.org/observer

Library
  Build-Depends:   base >= 4 && < 5
  Exposed-modules: Control.Observer
                   Control.Observer.Synchronous
  ghc-options:     -fwarn-tabs -Wall
